install_headers(
    'callback.h',
    'dbAccess.h',
    'dbAccessDefs.h',
    'dbAddr.h',
    'dbBkpt.h',
    'dbCa.h',
    'dbChannel.h',
    'dbConstLink.h',
    'dbConvert.h',
    'dbConvertFast.h',
    'dbConvertJSON.h',
    'dbDbLink.h',
    'dbExtractArray.h',
    'dbEvent.h',
    'dbJLink.h',
    'dbLink.h',
    'dbLock.h',
    'dbNotify.h',
    'dbScan.h',
    'dbServer.h',
    'dbTest.h',
    'dbCaTest.h',
    'db_test.h',
    'db_field_log.h',
    'initHooks.h',
    'recGbl.h',
    'dbIocRegister.h',
    'chfPlugin.h',
    'dbState.h',
    'db_access_routines.h',
    'db_convert.h',
    'dbUnitTest.h',
)

dbcore_src += files(
    'dbLock.c',
    'dbAccess.c',
    'dbBkpt.c',
    'dbChannel.c',
    'dbConstLink.c',
    'dbConvert.c',
    'dbConvertJSON.c',
    'dbDbLink.c',
    'dbFastLinkConv.c',
    'dbExtractArray.c',
    'dbJLink.c',
    'dbLink.c',
    'dbNotify.c',
    'dbScan.c',
    'dbEvent.c',
    'dbTest.c',
    'db_access.c',
    'db_test.c',
    'recGbl.c',
    'callback.c',
    'dbCa.c',
    'dbCaTest.c',
    'initHooks.c',
    'cvtBpt.c',
    'dbContext.cpp',
    'dbChannelIO.cpp',
    'dbSubscriptionIO.cpp',
    'dbPutNotifyBlocker.cpp',
    'dbContextReadNotifyCache.cpp',
    'dbIocRegister.c',
    'chfPlugin.c',
    'dbState.c',
    'dbUnitTest.c',
    'dbServer.c',
)

dbcommon_h = configure_file(
    command: [
        dbdtorecordtypeh,
        '-I', meson.current_source_dir(),
        '-o', 'dbCommon.h',
        'dbCommonRecord.dbd'
    ],
    output: 'dbCommon.h',
)

menuscan_h = menu_gen.process('menuScan.dbd')

dbcore_src += dbcommon_h
dbcore_src += menuscan_h
