
install_headers(
    'registryRecordType.h',
    'registryDeviceSupport.h',
    'registryDriverSupport.h',
    'registryJLinks.h',
    'registryFunction.h',
    'registryCommon.h',
    'registryIocRegister.h',
)

dbcore_src += files(
    'registryRecordType.c',
    'registryDeviceSupport.c',
    'registryDriverSupport.c',
    'registryJLinks.c',
    'registryFunction.c',
    'registryCommon.c',
    'registryIocRegister.c',
)
