
dbrecstd_src += files(
    'aaiRecord.c',
    'aaoRecord.c',
    'aiRecord.c',
    'aoRecord.c',
    'aSubRecord.c',
    'biRecord.c',
    'boRecord.c',
    'calcRecord.c',
    'calcoutRecord.c',
    'compressRecord.c',
    'dfanoutRecord.c',
    'eventRecord.c',
    'fanoutRecord.c',
    'histogramRecord.c',
    'int64inRecord.c',
    'int64outRecord.c',
    'longinRecord.c',
    'longoutRecord.c',
    'lsiRecord.c',
    'lsoRecord.c',
    'mbbiRecord.c',
    'mbbiDirectRecord.c',
    'mbboRecord.c',
    'mbboDirectRecord.c',
    'permissiveRecord.c',
    'printfRecord.c',
    'selRecord.c',
    'seqRecord.c',
    'stateRecord.c',
    'stringinRecord.c',
    'stringoutRecord.c',
    'subRecord.c',
    'subArrayRecord.c',
    'waveformRecord.c',
)
