install_data('Base.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Breaktable.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Device.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Driver.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Function.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Link.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Menu.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Output.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Parser.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Recfield.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Record.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Recordtype.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Registrar.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
install_data('Variable.pm', install_dir: join_paths(get_option('libdir'), 'perl', 'DBD'))
